--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
     <footer></footer>
 </body>
 <script src="./js/script.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="js/materialize.js"></script>
+<script src="js/init.js"></script>
 
 </html>
