Responsive layout for projects on Home created

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" />
-
     <link href="./css/nav_bar.css" type="text/css" rel="stylesheet" />
     <link href="./css/home.css" type="text/css" rel="stylesheet" />
+    <link href="./css/home-work.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -29,6 +29,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#about">About me</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -37,17 +38,39 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#about">About me</a></li>
+        <li><a href="#contact">Contact</a></li>
     </ul>
 
-    <section id="home-content"></section>
-    <section id="work"></section>
+    <section id="home-content">
+    </section>
+
+    <section id="work">
+        <div id="projects">
+            <div class="container">
+                <!-- PLACE WHERE EACH PROJECT IS ADDED -->
+<!--
+                <div class="item">
+                    <a href="cherry_pop.html">
+                    <img src="images/home_img_sqr.png" class="img_portfolio">
+                        </a>
+                    <h3>Projekt 1</h3>
+                    <h4>UX/UI design | Graphic design</h4>
+                </div>
+-->
+            </div>
+        </div>
+
+    </section>
+
     <section id="about"></section>
+
+    <section id="contact"></section>
 
     <footer></footer>
 </body>
 <script src="./js/script.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
-<script src="js/init.js"></script>
+<script src="js/home-work.js"></script>
 
 </html>
