Buttons for filtering project made

--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
     </section>
 
     <section id="work">
+
+        <div id="filtersHeader">
+            <h2>MY WORK</h2>
+            <div id="filters">
+                <button class="filterButton">UI design</button>
+                <button class="filterButton">UX research</button>
+                <button class="filterButton">Front-end</button>
+                <button class="filterButton">Graphic design</button>
+                <button class="filterButton">Print</button>
+            </div>
+        </div>
+
+
         <div id="projects">
             <div class="container">
                 <!-- PLACE WHERE EACH PROJECT IS ADDED -->
