Filter buttons changing style and adding/removing to global variable working

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="robots" content="noindex, nofollow">
     <link rel="icon" type="image/svg" href="images/logo_icon3.png">
     <title>ancy.design</title>
-    <link rel="stylesheet" href="./css/style.css">
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" />
     <link href="./css/nav_bar.css" type="text/css" rel="stylesheet" />
-    <link href="./css/home.css" type="text/css" rel="stylesheet" />
     <link href="./css/home-work.css" type="text/css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" >
 </head>
 
 <body>
@@ -49,7 +49,7 @@
         <div id="filtersHeader">
             <h2>MY WORK</h2>
             <div id="filters">
-                <button class="filterButton">UI design</button>
+                <button class="filterButton">UX/UI design</button>
                 <button class="filterButton">UX research</button>
                 <button class="filterButton">Front-end</button>
                 <button class="filterButton">Graphic design</button>
