Smooth scrolling on achor tags added

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#about">About me</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home" class="smoothScroll">Home</a></li>
+                <li><a href="#work" class="smoothScroll">Work</a></li>
+                <li><a href="#about" class="smoothScroll">About me</a></li>
+                <li><a href="#contact" class="smoothScroll">Contact</a></li>
             </ul>
         </div>
     </nav>
 
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#about">About me</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#home" class="smoothScroll">Home</a></li>
+        <li><a href="#work" class="smoothScroll">Work</a></li>
+        <li><a href="#about" class="smoothScroll">About me</a></li>
+        <li><a href="#contact" class="smoothScroll">Contact</a></li>
     </ul>
 
     <section id="home-content">
@@ -81,6 +81,7 @@
 
     <footer></footer>
 </body>
+<script src="./js/effects.js"></script>
 <script src="./js/script.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
