Checking out hiro blur options on Home

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" />
     <link href="./css/nav_bar.css" type="text/css" rel="stylesheet" />
-    <link href="./css/home-work.css" type="text/css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" >
+    <link href="./css/home-style.css" rel="stylesheet" >
+    <link href="./css/home-work.css" type="text/css" rel="stylesheet" />
+    
 </head>
 
 <body>
@@ -42,7 +44,11 @@
     </ul>
 
     <section id="home-content">
+        <div class="circle"></div>
+        <div class="circle2"></div>
+        <div id="home-container-for-blur"></div>
     </section>
+    
 
     <section id="work">
 
