Scroll down elements animating

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" />
     <link href="./css/nav_bar.css" type="text/css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" >
-    <link href="./css/home-style.css" rel="stylesheet" >
+    <link href="./css/home-global-style.css" rel="stylesheet" >
+    <link href="./css/home-hero.css" rel="stylesheet" >
     <link href="./css/home-work.css" type="text/css" rel="stylesheet" />
     
 </head>
 
 <body>
-    <div id="home"></div>
+    <div id="hero"></div>
     <nav>
         <div class="nav-wrapper">
             <a href="index.html">
@@ -43,10 +44,16 @@
         <li><a href="#contact" class="smoothScroll">Contact</a></li>
     </ul>
 
-    <section id="home-content">
+    <section id="hero-content">
         <div class="circle"></div>
         <div class="circle2"></div>
-        <div id="home-container-for-blur"></div>
+        <div id="hero-container-for-blur"></div>
+        <div id="scrollDown">
+            <img src="./images/scroll_down.png">
+        </div>
+        <div id="arrowDown">
+            <img src="./images/arrowDown.png">
+        </div>
     </section>
     
 
