Styling hiro section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#home" class="smoothScroll">Home</a></li>
+                <li><a href="#hero-content" class="smoothScroll">Home</a></li>
                 <li><a href="#work" class="smoothScroll">Work</a></li>
                 <li><a href="#about" class="smoothScroll">About me</a></li>
                 <li><a href="#contact" class="smoothScroll">Contact</a></li>
@@ -38,7 +38,7 @@
     </nav>
 
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="#home" class="smoothScroll">Home</a></li>
+        <li><a href="#hero-content" class="smoothScroll">Home</a></li>
         <li><a href="#work" class="smoothScroll">Work</a></li>
         <li><a href="#about" class="smoothScroll">About me</a></li>
         <li><a href="#contact" class="smoothScroll">Contact</a></li>
@@ -48,16 +48,35 @@
         <div class="circle"></div>
         <div class="circle2"></div>
         <div id="hero-container-for-blur"></div>
+        <div id="hero-text">
+            <h1>Hi, my name is Anna</h1> 
+            <p class="p-hero">
+                A UI/UX designer driven by curiosity and enthusiasm. I have a background in Graphic Design, and currently, I'm studying Multimedia Design at KEA, Copenhagen to further develop my web design and front-end skills.
+            </p>
+            <button id="heroButton">More about me</button>
+         </div>
+    </section>
+    
+
+    <section id="work">
+        <!-- Hero elements -->
+        <!-- <div id="hero-text">
+            <h1>Hi, my name is Anna</h1> 
+            <p class="p-hero">
+                A UI/UX designer driven by curiosity and enthusiasm. I have a background in Graphic Design, and currently, I'm studying Multimedia Design at KEA, Copenhagen to further develop my web design and front-end skills.
+            </p>
+            <button id="heroButton">More about me</button>
+         </div> -->
+
         <div id="scrollDown">
             <img src="./images/scroll_down.png">
         </div>
         <div id="arrowDown">
             <img src="./images/arrowDown.png">
         </div>
-    </section>
-    
 
-    <section id="work">
+        <!-- End of hero elements -->
+
 
         <div id="filtersHeader">
             <h2>MY WORK</h2>
@@ -65,6 +84,7 @@
                 <button class="filterButton">UX/UI design</button>
                 <button class="filterButton">UX research</button>
                 <button class="filterButton">Front-end</button>
+                <button class="filterButton">Branding</button>
                 <button class="filterButton">Graphic design</button>
                 <button class="filterButton">Print</button>
             </div>
