--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
     </ul>
 
     <section id="hero-content">
-        <div class="circle"></div>
-        <div class="circle2"></div>
+        <div class="shape1"></div>
+        <div class="shape2"></div>
+        <div class="shape3"></div>
+        <div class="shape4"></div>
+        <div class="shape5"></div>
         <div id="hero-container-for-blur"></div>
         <div id="hero-text">
             <h1>Hi, my name is Anna</h1> 
             <p class="p-hero">
                 A UI/UX designer driven by curiosity and enthusiasm. I have a background in Graphic Design, and currently, I'm studying Multimedia Design at KEA, Copenhagen to further develop my web design and front-end skills.
             </p>
-            <button id="heroButton">More about me</button>
+            <a href="#about"><button id="heroButton">More about me</button></a>
          </div>
     </section>
     
