Blank page for projects added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="./css/home-global-style.css" rel="stylesheet" >
     <link href="./css/home-hero.css" rel="stylesheet" >
     <link href="./css/home-work.css" type="text/css" rel="stylesheet" />
+    <link href="./css/home-about-me.css" type="text/css" rel="stylesheet" />
     
 </head>
 
@@ -111,9 +112,30 @@
 
     </section>
 
-    <section id="about"></section>
+    <section id="about">
+        <div id="about-me-text">
+            <h2>ABOUT ME</h2> 
+            <p>
+                I'm a design passionate who's destined to create usable, digital products. I am constantly seeking out opportunities to combine my passions for art and technology. That is why I hold B.A. degree in Graphic Arts from PJAIT in Warsaw, Poland, and currently I'm developing my UX/UI and frontend skills studing Multimedia Design at KEA in Copenhagen.
+            </p>
+            <h3>Skills</h3> 
+            <ul>
+                <li>Lorem ipsum</li>
+                <li>Lorem ipsum</li>
+                <li>Lorem ipsum</li>
+                <li>Lorem ipsum</li>
+                <li>Lorem ipsum</li>
+            </ul>
+        </div>
 
-    <section id="contact"></section>
+        <div>
+            <img id="profilePhoto" src="./images/Profile_photo.png" alt="">
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>CONTACT</h2> 
+    </section>
 
     <footer></footer>
 </body>
