--- a/draft-project.html
+++ b/draft-project.html
@@ -9,12 +9,12 @@
     <meta name="robots" content="noindex, nofollow">
 
     <link rel="icon" type="image/svg" href="images/logo_icon3.png">
-    <title>History of micro computer project</title>
+    <title>Title here</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" />
     <link href="./css/nav_bar.css" type="text/css" rel="stylesheet" />
-    <link href="./css/blank-project.css" type="text/css" rel="stylesheet" />
+    <link href="./css/css-projects/draft-project.css" type="text/css" rel="stylesheet" />
 
 </head>
 
