--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" />
     <link href="./css/nav_bar.css" type="text/css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" >
-    <link href="./css/home-global-style.css" rel="stylesheet" >
-    <link href="./css/home-hero.css" rel="stylesheet" >
-    <link href="./css/home-work.css" type="text/css" rel="stylesheet" />
-    <link href="./css/home-about-me.css" type="text/css" rel="stylesheet" />
+    <link href="./css/css-home/home-global-style.css" rel="stylesheet" >
+    <link href="./css/css-home/home-hero.css" rel="stylesheet" >
+    <link href="./css/css-home/home-work.css" type="text/css" rel="stylesheet" />
+    <link href="./css/css-home/home-about-me.css" type="text/css" rel="stylesheet" />
     
 </head>
 
