View of blur elements fixed on other browsers than Chrome

--- a/index.html
+++ b/index.html
@@ -120,11 +120,12 @@
             </p>
             <h3>Skills</h3> 
             <ul>
-                <li>Lorem ipsum</li>
-                <li>Lorem ipsum</li>
-                <li>Lorem ipsum</li>
-                <li>Lorem ipsum</li>
-                <li>Lorem ipsum</li>
+                <li>Web design</li>
+                <li>Prototyping</li>
+                <li>UX research</li>
+                <li>Graphic Design</li>
+                <li>Front-end development using HTML, CSS, Javascript</li>
+                <li>Logo & Branding Design</li>
             </ul>
         </div>
 
@@ -139,7 +140,8 @@
 
     <footer></footer>
 </body>
-<script src="./js/effects.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
 <script src="./js/script.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
